# 3D-Renderer

./: .clang-format  .gitignore  CMakeLists.txt  convert-mesh.sh  main.cpp
include/: bstd.h
include/game/: asteroid.h  cube.h  game_object.h  input_manager.h  key.h  planet.h  projectile.h  spaceship.h
include/math/: Grid.h  Matrix.h  Shape.h  Vector.h  Vector2f.h  collidable.h  complex_mesh.h  grid.h  mat4.h  mesh.h  shape.h  vec4.h  vector.h
include/ui/: GridRenderable.h  Renderable.h  Renderer.h  Scene.h  VectorRenderable.h  grid_renderable.h  mesh_loader.h  renderable.h  renderer.h  scene.h  vector_renderable.h
include/ui/sdl/: Frame.h  Window.h  frame.h  window.h
src/game/: game_object.cpp  input_manager.cpp  projectile.cpp  spaceship.cpp
src/math/: Grid.cpp  Matrix.cpp  Shape.cpp  Vector.cpp  Vector2f.cpp  complex_mesh.cpp  grid.cpp  mat4.cpp  mesh.cpp  shape.cpp  vec4.cpp  vector.cpp
src/ui/: Renderer.cpp  Scene.cpp  mesh_loader.cpp  renderer.cpp  scene.cpp
src/ui/sdl/: Frame.cpp  Window.cpp  frame.cpp  window.cpp
test/: sample.cpp
test/math/: mat4.cpp  math4.cpp  vec4.cpp
